src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Endowment__c</fullName>
        <label>Endowment</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Application_Website__c</fullName>
        <label>Grant Application Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Farmer_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this partner/organisation/account is a Farmer Group as well and needs to be displayed on the farmer registration form</description>
        <label>Is Farmer Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Partner_Organisation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this organisation is a partner that deploys CKWs</description>
        <label>Is Partner Organisation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Map__c</fullName>
        <formula>hyperlink (&quot;/servlet/servlet.Integration?lid=00b70000000mQmj&amp;eid=&quot; &amp;Id, IMAGE( &quot;servlet/servlet.FileDownload?file=01570000000LVBl&quot;, &quot;image from Documents tab&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Ratio__c</fullName>
        <label>Match Ratio</label>
        <picklist>
            <picklistValues>
                <fullName>1:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Website__c</fullName>
        <label>Matching Gift Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Max_Match__c</fullName>
        <label>Max. Match</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Per_Employee__c</fullName>
        <label>Max. Per Employee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Match__c</fullName>
        <label>Min. Match</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Typical_Grant_Size__c</fullName>
        <label>Typical Grant Size</label>
        <picklist>
            <picklistValues>
                <fullName>$10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$25,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$250,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,000,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Will_Give_To__c</fullName>
        <label>Will Give To</label>
        <picklist>
            <picklistValues>
                <fullName>Arts, Culture, and Humanities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment and Animals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International, Foreign Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mutual/Membership Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public, Societal Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religion Related</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Zendesk__Domain_Mapping__c</fullName>
        <label>Domain Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Result__c</fullName>
        <description>Contains the result of whether the Zendesk system was updated with the Account record changes</description>
        <label>Zendesk Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Organization_Id__c</fullName>
        <description>Contains the Zendesk ORG Id</description>
        <label>Zendesk Organization Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Organization__c</fullName>
        <description>Specify your Zendesk Organization name here if you&apos;d like to override the default behavior of the ticket view.</description>
        <inlineHelpText>Show Zendesk tickets for the specified organization instead of the combined tickets for all users in the account.</inlineHelpText>
        <label>Zendesk Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_OutofSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to True if the record is not synced with Zendesk Organization</description>
        <label>Zendesk_OutofSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_oldTags__c</fullName>
        <description>contains the old tags before changes were made to the tags. To handle deleting tags in Zendesk system.</description>
        <label>Zendesk_oldTags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__createdUpdatedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in trigger to prevent looping of after insert and update. This flag is used to stop the account that came for creation to get updated again thereby preventing the loop</description>
        <label>createdUpdatedFlag</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllBusinesses</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business</value>
        </filters>
        <label>All Businesses</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllGovernment</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Government</value>
        </filters>
        <label>All Government</label>
    </listViews>
    <listViews>
        <fullName>AllNonprofits</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Nonprofit</value>
        </filters>
        <label>All Nonprofits</label>
    </listViews>
    <recordTypes>
        <fullName>Business</fullName>
        <active>true</active>
        <description>Use this record type for corporations or small businesses</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Foundation</fullName>
        <active>true</active>
        <description>Use this record type for foundation entities</description>
        <label>Foundation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Government</fullName>
        <active>true</active>
        <description>Use this record type for government agencies (federal, local or state)</description>
        <label>Government</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual</fullName>
        <active>true</active>
        <description>represents a single contact record</description>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nonprofit</fullName>
        <active>true</active>
        <description>Use this record type for nonprofit entities</description>
        <label>Nonprofit</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Two_Letter_Valid_State_Abbreviation</fullName>
        <active>true</active>
        <description>The valid 2 letter state abbreviation is required</description>
        <errorConditionFormula>AND ( OR(BillingCountry = &quot;US&quot;, BillingCountry=&quot;USA&quot;, LEN(BillingCountry)=0), OR( LEN(BillingState) &lt; 2, NOT( CONTAINS(&quot;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:&quot; &amp; &quot;IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:&quot; &amp; &quot;NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:&quot; &amp; &quot;WA:WV:WI:WY&quot;, BillingState) )))</errorConditionFormula>
        <errorDisplayField>BillingState</errorDisplayField>
        <errorMessage>A valid 2 letter state abbreviation is required</errorMessage>
    </validationRules>
</CustomObject>